--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -27,8 +27,8 @@
 "tab-crypto" = "CRYPTO";
 "tab-signature" = "SIGNATURE";
 "tab-sign-button" = "SIGN";
-"tab-share-button" = "SHARE";
-"tab-encrypt-button" = "ENCRYPT";
+"tab-share-button" = "SHARE CONTAINER";
+"tab-encrypt-button" = "ENCRYPT DOCUMENT";
 "tab-decrypt-button" = "DECRYPT";
 "tab-confirm-button" = "CONFIRM";
 
@@ -36,6 +36,7 @@
 "tab-unselected" = "%@, tab %@ of %@";
 
 // Main menu
+"menu-close" = "CLOSE MENU";
 "menu-help" = "HELP";
 "menu-recent-containers" = "RECENT DOCUMENTS";
 "menu-settings" = "SETTINGS";
@@ -67,7 +68,7 @@
 "crypto-type-eseal" = "Certificate for Encryption";
 "crypto-type-mobile-id" = "Mobile-ID";
 "crypto-type-unknown" = "Unknown";
-"crypto-add-addressee-button-title" = "ADD";
+"crypto-add-addressee-button-title" = "ADD RECIPIENT";
 "crypto-addressee-added-button-title" = "ADDED";
 "crypto-remove-addressee-button" = "Remove recipient";
 
@@ -266,9 +267,16 @@
 "my-eid-current-code-label" = "CURRENT %@ CODE";
 "my-eid-new-code-label" = "NEW %@ CODE (at least %i symbols)";
 "my-eid-new-code-again-label" = "REPEAT NEW %@ CODE";
-"my-eid-discard-button-title" = "CANCEL";
-"my-eid-confirm-change-button-title" = "CHANGE";
-"my-eid-confirm-unblock-button-title" = "UNBLOCK";
+"my-eid-discard-pin1-button-title" = "CANCEL PIN1 CHANGING PROCESS";
+"my-eid-discard-pin2-button-title" = "CANCEL PIN2 CHANGING PROCESS";
+"my-eid-confirm-pin1-change-button-title" = "CONFIRM PIN1 CHANGE";
+"my-eid-confirm-pin2-change-button-title" = "CONFIRM PIN2 CHANGE";
+"my-eid-discard-pin1-unblock-button-title" = "CANCEL PIN1 UNBLOCKING PROCESS";
+"my-eid-discard-pin2-unblock-button-title" = "CANCEL PIN2 UNBLOCKING PROCESS";
+"my-eid-confirm-pin1-unblock-button-title" = "CONFIRM PIN1 UNBLOCK";
+"my-eid-confirm-pin2-unblock-button-title" = "CONFIRM PIN2 UNBLOCK";
+"my-eid-discard-puk-change-button-title" = "CANCEL PUK CHANGING PROCESS";
+"my-eid-confirm-puk-change-button-title" = "CONFIRM PUK CHANGE";
 "my-eid-error-new-code-too-short" = "New %@ code must be at least %i digits long";
 "my-eid-error-current-code-too-short" = "Current %@ code must be at least %i digits long";
 "my-eid-error-codes-mismatch" = "New %@ codes must match";
