--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -27,8 +27,8 @@
 "tab-crypto" = "КРИПТО";
 "tab-signature" = "ПОДПИСЬ";
 "tab-sign-button" = "ПОДПИСАТЬ";
-"tab-share-button" = "ПОДЕЛИТЬСЯ";
-"tab-encrypt-button" = "ЗАШИФРОВАТЬ";
+"tab-share-button" = "ПОДЕЛИТЬСЯ КОНТЕЙНЕРОМ";
+"tab-encrypt-button" = "ЗАШИФРОВАТЬ ДОКУМЕНТ";
 "tab-decrypt-button" = "ДЕШИФРОВАТЬ";
 "tab-confirm-button" = "ПОДТВЕРДИТЬ";
 
@@ -36,6 +36,7 @@
 "tab-unselected" = "%@, вкладка %@ из %@";
 
 // Main menu
+"menu-close" = "ЗАКРЫТЬ МЕНЮ";
 "menu-help" = "ПОМОЩЬ";
 "menu-recent-containers" = "НЕДАВНИЕ ДОКУМЕНТЫ";
 "menu-settings" = "НАСТРОЙКИ";
@@ -67,7 +68,7 @@
 "crypto-type-eseal" = "Сертификат шифрования";
 "crypto-type-mobile-id" = "Mobiil-ID";
 "crypto-type-unknown" = "Неизвестно";
-"crypto-add-addressee-button-title" = "ДОБАВИТЬ";
+"crypto-add-addressee-button-title" = "ДОБАВИТЬ ПОЛУЧАТЕЛЯ";
 "crypto-addressee-added-button-title" = "ДОБАВЛЕН";
 
 // Signing view
@@ -267,9 +268,14 @@
 "my-eid-current-code-label" = "ДЕЙСТВУЮЩИЙ %@-КОД";
 "my-eid-new-code-label" = "НОВЫЙ %@-КОД (не меньше %i символов)";
 "my-eid-new-code-again-label" = "ПОВТОРИТЬ НОВЫЙ %@-КОД";
-"my-eid-discard-button-title" = "ОТМЕНИТЬ";
-"my-eid-confirm-change-button-title" = "ИЗМЕНИТЬ";
-"my-eid-confirm-unblock-button-title" = "РАЗБЛОКИРОВАТЬ";
+"my-eid-discard-pin1-button-title" = "ПРЕРВАТЬ ПРОЦЕСС ИЗМЕНЕНИЯ PIN1";
+"my-eid-discard-pin2-button-title" = "ПРЕРВАТЬ ПРОЦЕСС ИЗМЕНЕНИЯ PIN2";
+"my-eid-discard-pin1-unblock-button-title" = "ПРЕРВАТЬ ПРОЦЕСС АННУЛИРОВАНИЯ БЛОКИРОВКИ PIN1";
+"my-eid-discard-pin2-unblock-button-title" = "ПРЕРВАТЬ ПРОЦЕСС АННУЛИРОВАНИЯ БЛОКИРОВКИ PIN2";
+"my-eid-confirm-pin1-unblock-button-title" = "ПОДТВЕРДИТЬ АННУЛИРОВАНИЕ БЛОКИРОВКИ PIN1";
+"my-eid-confirm-pin2-unblock-button-title" = "ПОДТВЕРДИТЬ АННУЛИРОВАНИЕ БЛОКИРОВКИ PIN2";
+"my-eid-discard-puk-change-button-title" = "ПРЕРВАТЬ ПРОЦЕСС ИЗМЕНЕНИЯ PUK-КОДА";
+"my-eid-confirm-puk-change-button-title" = "ПОДТВЕРДИТЬ ИЗМЕНЕНИЕ PUK-КОД";
 "my-eid-error-new-code-too-short" = "Новый %@-код должен быть не менее %i символов";
 "my-eid-error-current-code-too-short" = "Действующий %@-код должен быть не менее %i символов";
 "my-eid-error-codes-mismatch" = "Новые %@-коды должны совпадать";
