--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -283,6 +283,8 @@
 "my-eid-confirm-unblock-button-title" = "РАЗБЛОКИРОВАТЬ";
 "my-eid-discard-pin1-button-title-accessibility" = "ПРЕРВАТЬ ПРОЦЕСС ИЗМЕНЕНИЯ PIN1";
 "my-eid-discard-pin2-button-title-accessibility" = "ПРЕРВАТЬ ПРОЦЕСС ИЗМЕНЕНИЯ PIN2";
+"my-eid-confirm-pin1-change-button-title-accessibility" = "ПОДТВЕРДИТЬ ИЗМЕНЕНИЕ PIN1";
+"my-eid-confirm-pin2-change-button-title-accessibility" = "ПОДТВЕРДИТЬ ИЗМЕНЕНИЕ PIN2";
 "my-eid-discard-pin1-unblock-button-title-accessibility" = "ПРЕРВАТЬ ПРОЦЕСС АННУЛИРОВАНИЯ БЛОКИРОВКИ PIN1";
 "my-eid-discard-pin2-unblock-button-title-accessibility" = "ПРЕРВАТЬ ПРОЦЕСС АННУЛИРОВАНИЯ БЛОКИРОВКИ PIN2";
 "my-eid-confirm-pin1-unblock-button-title-accessibility" = "ПОДТВЕРДИТЬ АННУЛИРОВАНИЕ БЛОКИРОВКИ PIN1";
