Save diagnostics information
* MOPPIOS-852

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -345,5 +345,6 @@
 "refresh-configuration-restart-message" = "Configuration and TSL updated successfully. Restart the application to complete the update";
 "refresh-configuration-updated" = "Configuration updated";
 "refresh-configuration-already-up-to-date" = "Configuration is already up-to-date";
+"save-diagnostics" = "SAVE DIAGNOSTICS";
 "success-notification-dialog-label" = "To share the container click the \"SHARE\" button and choose your preferred application. All containers can also be found in the application settings \"Recent Documents\" folder.";
 "success-notification-dialog-dont-show-again" = "Don't show again";
