--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -346,5 +346,6 @@
 "refresh-configuration-restart-message" = "Konfiguratsiooni ja TSL värskendamine õnnestus. Värskenduse lõpuleviimiseks taaskäivita rakendus";
 "refresh-configuration-updated" = "Konfiguratsioon uuendatud";
 "refresh-configuration-already-up-to-date" = "Konfiguratsioon on juba ajakohane";
+"save-diagnostics" = "SALVESTA DIAGNOSTIKA";
 "success-notification-dialog-label" = "Ümbriku jagamiseks klõpsa \"JAGA\" nupul ning vali soovitud rakendus. Kõik ümbrikud on leitavad ka rakenduse seadetes asuvas \"Hiljutised dokumendid\" kaustast.";
 "success-notification-dialog-dont-show-again" = "Ära rohkem näita";
