--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -176,6 +176,7 @@
 "datafile-remove-confirm-message" = "Remove file from container?";
 "last-datafile-remove-confirm-message" = "You are about to remove the last file in the container, it is removed along with the container.";
 "datafile-removed" = "File removed";
+"datafile-removal-failed" = "Failed to remove file";
 "datafile-removal-cancelled" = "File removal cancelled";
 "general-signature-adding-message" = "Failed to sign container";
 "general-signature-removal-message" = "Failed to remove signature from container";
