Mobile-ID and Smart-ID russian text support
* MOPPIOS-971

Signed-off-by: Marten Rebane marten.rebane@nortal.com

--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -158,8 +158,7 @@
 "challenge-code-label" = "%@";
 "challenge-code-label-accessibility" = "Контрольный код: %@ %@ %@ %@";
 
-// Currently must be in English
-"sim-toolkit-sign-document-title" = "Sign document";
+"sim-toolkit-sign-document-title" = "Подписать документ";
 
 // *** Errors ***
 "mobile-id-timeout-message" = "Тайм-аут запроса Mobiil-ID";
