--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -152,6 +152,8 @@
 "container-signature-status-non-qscd" = "(Restrictions)";
 "container-signature-status-invalid" = "Signature is not valid";
 "container-signature-status-unknown" = "Signature is unknown";
+"container-timestamp-valid" = "Timestamp is valid";
+"container-timestamp-unknown" = "Timestamp is unknown";
 "container-timestamp-invalid" = "Timestamp is not valid";
 
 // *** Mobile ID Challenge View ***
