--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -55,6 +55,7 @@
 "signature-view-begin-label" = "Allkirjastamiseks või kontrollimiseks vali fail";
 "signature-view-begin-button" = "VALI FAIL";
 "signature-details-title" = "Allkirja detailid";
+"certificate-details-title" = "Sertifikaadi detailid";
 "menu-button" = "Menüü";
 
 // Signing view
@@ -356,3 +357,22 @@
 "save-diagnostics" = "SALVESTA DIAGNOSTIKA";
 "success-notification-dialog-label" = "Ümbriku jagamiseks klõpsa \"JAGA\" nupul ning vali soovitud rakendus. Kõik ümbrikud on leitavad ka rakenduse seadetes asuvas \"Hiljutised dokumendid\" kaustast.";
 "success-notification-dialog-dont-show-again" = "Ära rohkem näita";
+
+// *** Signature details ***
+
+"signer-certificate-issuer-label" = "Allkirjastaja sertifikaadi väljaandja";
+"signers-certificate-label" = "Allkirjastaja sertifikaat";
+"signature-method-label" = "Allkirja meetod";
+"container-format-label" = "Ümbriku formaat";
+"signature-format-label" = "Allkirja formaat";
+"signed-file-count-label" = "Allkirjastatud failide arv";
+"signature-timestamp-label" = "Allkirja ajatempel";
+"signature-timestamp-utc-label" = "Allkirja ajatempel (UTC)";
+"hash-value-of-signature-label" = "Allkirja sõnumilühend";
+"ts-certificate-issuer-label" = "Ajatempliteenuse sertifikaadi väljaandja";
+"ts-certificate-label" = "Ajatempliteenuse sertifikaat";
+"ocsp-certificate-issuer-label" = "Kehtivuskinnituse sertifikaadi väljaandja";
+"ocsp-certificate-label" = "Kehtivuskinnituse sertifikaat";
+"ocsp-time-label" = "Kehtivuskinnituse aeg";
+"ocsp-time-utc-label" = "Kehtivuskinnituse aeg (UTC)";
+"signers-mobile-time-label" = "Allkirjastaja telefoni kellaaeg (UTC)";
