--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -337,6 +337,10 @@
 "settings-timestamp-use-default-title" = "Использовать значение по умолчанию";
 "settings-value-changed" = "Значение настройки изменено";
 "diagnostics-title" = "Диагностика";
+"diagnostics-activate-one-time-logging" = "Активировать одноразовое создание лог-файла";
+"diagnostics-save-log" = "СОХРАНИТЬ ЛОГ-ФАЙЛ";
+"diagnostics-restart-to-active-logging" = "Перезапустите RIA DigiDoc, чтобы активировать ведение журнала. https://www.id.ee/ru/artikkel/generirovanie-log-fajla-v-kliente-digidoc4/";
+"diagnostics-one-time-logging-read-more" = "Подробнее читайте здесь";
 "diagnostics-app-version" = "Версия приложения";
 "diagnostics-ios-version" = "Операционная система";
 "diagnostics-libraries-label" = "Библиотеки";
